--- a/home/css/style.css
+++ b/home/css/style.css
@@ -14,7 +14,7 @@ html, body {
   width: 100%;
   color: #FFF;
   background: #1E1F27;
-  font-family: 'arial black', verdana, Helvetica, monospace;
+  font-family: 'arial black', 'Futura', verdana, Helvetica, monospace;
   font-size: 100%;
   line-height: 1.6;
 }
