--- a/home/css/style.css
+++ b/home/css/style.css
@@ -14,7 +14,7 @@ html, body {
   width: 100%;
   color: #FFF;
   background: #1E1F27;
-  font-family: 'arial black', 'Futura', verdana, Helvetica, monospace;
+  font-family: 'arial black', 'Arial Rounded MT Bold', verdana, Helvetica, monospace;
   font-size: 100%;
   line-height: 1.6;
 }
@@ -63,8 +63,8 @@ header {
   overflow: hidden;
 }
 #mainImage > img{
-  width: 200%;
-  margin: 0 -50% 0 -50%;
+  width: 300%;
+  margin: 0 -100% 0 -100%;
   opacity: 0.5;
 }
 
