--- a/home/css/style.css
+++ b/home/css/style.css
@@ -145,7 +145,7 @@ section#about ul > li {
 footer {
   font-size: 0.8rem;
   text-align: right;
-  padding: 1.6rem 0;
+  padding: 1.6rem;
 }
 
 /********************
