--- a/works/shapeOfUniverse/style.css
+++ b/works/shapeOfUniverse/style.css
@@ -12,7 +12,7 @@ html, body {
   margin: 0;
   letter-spacing: 0.2rem;
   overflow: hidden;
-  background: #092745;
+  background: #000;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -55,14 +55,37 @@ p#loading {
 ********************/
 
 canvas#canvas {
-  background: #092745;
-  cursor: pointer;
+  background: #000;
 }
 
-div.controller {
+ul#navigation {
   position: absolute;
+  height: 100%;
+  top: 0;
+  right: 0;
+  writing-mode: vertical-rl;
+  text-align: center;
+  padding-right: 1.6rem;
+  font-size: 0.8rem;
+}
+ul#navigation > li {
+  display: inline-block;
+}
+p.left {
+  font-size: 0.8rem;
+  position: absolute;
+  right: 0;
   bottom: 0;
-  left: 0;
-  padding: 1.6rem
+  padding: 1.6rem;
 }
 
+@media screen and (min-width: 48rem) {
+
+  p.count {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    padding: 1.6rem;
+  }
+
+}
