--- a/works/shapeOfUniverse/style.css
+++ b/works/shapeOfUniverse/style.css
@@ -77,7 +77,7 @@ ul#navigation > li {
 p.right {
   font-size: 0.8rem;
   position: absolute;
-  right: 0;
+  left: 0;
   bottom: 0;
   padding: 1.6rem;
 }
@@ -89,6 +89,10 @@ p.right {
     left: 0;
     bottom: 0;
     padding: 1.6rem;
+  }
+  p.right {
+    left: initial;
+    right: 0%;
   }
 
 }
