--- a/works/textMotionSim/style.css
+++ b/works/textMotionSim/style.css
@@ -58,19 +58,22 @@ canvas#canvas {
   background: #000;
 }
 
-ul#navigation {
-  position: absolute;
-  height: 100%;
-  top: 0;
-  right: 0;
-  -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: tb-rl;
-          writing-mode: vertical-rl;
-  text-align: center;
-  margin-right: 1.6rem;
-  font-size: 0.8rem;
-}
-ul#navigation > li {
-  display: inline-block;
-}
+@media screen and (min-width: 48rem) {
 
+  ul#navigation {
+    position: absolute;
+    height: 100%;
+    top: 0;
+    right: 0;
+    -webkit-writing-mode: vertical-rl;
+        -ms-writing-mode: tb-rl;
+            writing-mode: vertical-rl;
+    text-align: center;
+    margin-right: 1.6rem;
+    font-size: 0.8rem;
+  }
+  ul#navigation > li {
+    display: inline-block;
+  }
+
+}
