--- a/works/wrinkle/style.css
+++ b/works/wrinkle/style.css
@@ -6,7 +6,7 @@ html, body {
   height: 100%;
   width: 100%;
   font-family: 'arial black', Helvetica, verdana, monospace, sans-serif;
-  color: #FFF;
+  color: #000;
   font-size: 100%;
   padding: 0;
   margin: 0;
@@ -24,7 +24,7 @@ body {
 }
 
 a {
-  color: #FFF;
+  color: #000;
   text-decoration: none;
 }
 
