--- a/works/square/style.css
+++ b/works/square/style.css
@@ -6,7 +6,7 @@ html, body {
   height: 100%;
   width: 100%;
   font-family: 'arial black', Helvetica, verdana, monospace, sans-serif;
-  color: #000;
+  color: #FFF;
   font-size: 100%;
   padding: 0;
   margin: 0;
@@ -24,7 +24,7 @@ body {
 }
 
 a {
-  color: #000;
+  color: #FFF;
   text-decoration: none;
 }
 
@@ -58,22 +58,18 @@ canvas#canvas {
   background: #000;
 }
 
-@media screen and (min-width: 48rem) {
-
-  ul#navigation {
-    position: absolute;
-    height: 100%;
-    top: 0;
-    right: 0;
-    -webkit-writing-mode: vertical-rl;
-        -ms-writing-mode: tb-rl;
-            writing-mode: vertical-rl;
-    text-align: center;
-    margin-right: 1.6rem;
-    font-size: 0.8rem;
-  }
-  ul#navigation > li {
-    display: inline-block;
-  }
-
+ul#navigation {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  right: 0;
+  text-align: center;
+  margin-right: 1.6rem;
+  font-size: 0.8rem;
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+}
+ul#navigation > li {
+  display: inline-block;
 }
