--- a/works/noise/style.css
+++ b/works/noise/style.css
@@ -55,7 +55,8 @@ p#loading {
 ********************/
 
 canvas#canvas {
-  background: #000;
+  opacity: 0.8;
+  background: radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
 }
 
 ul#navigation {
