--- a/works/particleOnPicture/style.css
+++ b/works/particleOnPicture/style.css
@@ -55,16 +55,23 @@ p#loading {
 ********************/
 
 canvas#canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+  background: #000;
 }
 
-canvas#canvasNoise {
+ul#navigation {
   position: absolute;
+  height: 100%;
   top: 0;
-  left: 0;
+  right: 0;
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+  text-align: center;
+  margin-right: 1.6rem;
+  font-size: 0.8rem;
+}
+ul#navigation > li {
+  display: inline-block;
 }
 
 @media screen and (min-width: 48rem) {
