--- a/works/particleOnText/style.css
+++ b/works/particleOnText/style.css
@@ -61,7 +61,7 @@ canvas#canvas {
 }
 
 div#controller {
-  font-size: 0.8rem;
+  font-size: 16px;
   display: none;
   height: 100%;
   position: absolute;
