--- a/works/particleOnText/style.css
+++ b/works/particleOnText/style.css
@@ -58,7 +58,7 @@ canvas#canvas {
 }
 
 div#controller {
-  font-size: 16px;
+  font-size: 0.8rem;
   display: none;
   height: 100%;
   position: absolute;
@@ -75,6 +75,7 @@ div#controller > dl {
 }
 
 input#text {
+  font-size: 16px;
   width: 100%;
   height: 30px;
 }
@@ -99,6 +100,7 @@ input[type='range'] {
 }
 
 select#composition {
+  font-size: 16px;
   width: 100%;
   height: 30px;
 }
