--- a/works/meaningless/style.css
+++ b/works/meaningless/style.css
@@ -29,7 +29,7 @@ a {
 }
 
 h1 {
-  font-size: 2.4rem;
+  font-size: 1.6rem;
 }
 
 ul > li {
@@ -41,6 +41,7 @@ header#header {
   top: 0;
   left: 0;
   padding: 1.6rem;
+  z-index: 2;
 }
 
 p#loading {
@@ -54,7 +55,25 @@ p#loading {
   Contents
 ********************/
 
+main {
+  height: 110%;
+  width: 110%;
+  overflow: hidden;
+  position: absolute;
+  top: 55%;
+  left: 55%;
+  transform: translateX(-55%) translateY(-55%);
+}
+
 input {
   width: 10px;
   height: 10px;
+}
+
+@media screen and (min-width: 48rem) {
+
+  h1 {
+    font-size: 2.4rem;
+  }
+
 }
