--- a/works/fun/style.css
+++ b/works/fun/style.css
@@ -12,7 +12,7 @@ html, body {
   margin: 0;
   letter-spacing: 0.2rem;
   overflow: hidden;
-  background: #000;
+  background: #ACE8FE;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -29,7 +29,7 @@ a {
 }
 
 h1 {
-  font-size: 2.4rem;
+  font-size: 1.6rem;
 }
 
 ul > li {
@@ -55,7 +55,7 @@ p#loading {
 ********************/
 
 canvas#canvas {
-  background: #000;
+  background: #ACE8FE;
 }
 
 ul#navigation {
@@ -73,4 +73,12 @@ ul#navigation {
 
 ul#navigation > li {
   display: inline-block;
+}
+
+@media screen and (min-width: 48rem) {
+
+  h1 {
+    font-size: 2.4rem;
+  }
+
 }
