--- a/works/practice/style.css
+++ b/works/practice/style.css
@@ -5,15 +5,17 @@
 html, body {
   height: 100%;
   width: 100%;
-  font-family: 'arial black', Helvetica, verdana, monospace;
-  color: #FFF;
-  user-select: none;
+  font-family: 'arial black', Helvetica, verdana, monospace, sans-serif;
   font-size: 100%;
   padding: 0;
   margin: 0;
   letter-spacing: 0.2rem;
   overflow: hidden;
   background: #000;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 body {
@@ -21,12 +23,12 @@ body {
 }
 
 a {
-  color: #FFF;
+  color: #000;
   text-decoration: none;
 }
 
 h1 {
-  font-size: 2.4rem;
+  font-size: 1.6rem;
 }
 
 ul > li {
@@ -52,12 +54,42 @@ p#loading {
 ********************/
 
 canvas#canvas {
-  background: #000;
+  background-image: url(./image.jpg);
+  background-size: cover;
 }
 
-#controller {
+p.count {
   position: absolute;
+  left: 0;
+  bottom: 0;
+  padding: 1.6rem;
+}
+
+p.count > span {
+  line-height: 3.2rem;
+}
+
+ul#navigation {
+  position: absolute;
+  height: 100%;
   top: 0;
   right: 0;
-  margin: 1.6rem;
+  text-align: center;
+  margin-right: 1.6rem;
+  font-size: 0.8rem;
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+}
+
+ul#navigation > li {
+  display: inline-block;
+}
+
+@media screen and (min-width: 48rem) {
+
+  h1 {
+    font-size: 2.4rem;
+  }
+
 }
