--- a/works/eyesight/style.css
+++ b/works/eyesight/style.css
@@ -29,7 +29,7 @@ a {
 }
 
 h1 {
-  font-size: 2.4rem;
+  font-size: 1.6rem;
 }
 
 ul > li {
@@ -73,4 +73,12 @@ ul#navigation {
 
 ul#navigation > li {
   display: inline-block;
+}
+
+@media screen and (min-width: 48rem) {
+
+  h1 {
+    font-size: 2.4rem;
+  }
+
 }
