--- a/works/ultima/style.css
+++ b/works/ultima/style.css
@@ -25,7 +25,7 @@ a {
 }
 
 h1 {
-  font-size: 2.4rem;
+  font-size: 1.6rem;
 }
 
 ul > li {
@@ -62,6 +62,7 @@ ul#settingAngle {
   text-align: center;
   font-size: 0.8rem;
   cursor: pointer;
+
 }
 ul#settingAngle > li {
   display: inline-block;
@@ -80,6 +81,15 @@ ul#navigation {
   margin-right: 1.6rem;
   font-size: 0.8rem;
 }
+
 ul#navigation > li {
   display: inline-block;
+}
+
+@media screen and (min-width: 48rem) {
+
+  h1 {
+    font-size: 2.4rem;
+  }
+
 }
