--- a/works/moonRiver/style.css
+++ b/works/moonRiver/style.css
@@ -12,7 +12,9 @@ html, body {
   letter-spacing: 0.2rem;
   overflow: hidden;
   color: #FFF;
-  background: #000;
+  background: #360033;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #0b8793, #360033);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #0b8793, #360033); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -55,19 +57,9 @@ p#loading {
 ********************/
 
 canvas#canvas {
-  background: #000;
-}
-
-h2 {
-  position: absolute;
-  height: 100%;
-  top: 0;
-  right: 1.6rem;
-  text-align: center;
-  font-size: 0.8rem;
-  -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: tb-rl;
-          writing-mode: vertical-rl;
+  background: #360033;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #0b8793, #360033);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #0b8793, #360033); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 @media screen and (min-width: 48rem) {
