--- a/works/nightmare/style.css
+++ b/works/nightmare/style.css
@@ -11,6 +11,7 @@ html, body {
   margin: 0;
   letter-spacing: 0.2rem;
   overflow: hidden;
+  color: #FFF;
   background: #000;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -23,7 +24,7 @@ body {
 }
 
 a {
-  color: #000;
+  color: #FFF;
   text-decoration: none;
 }
 
