--- a/works/inTheEnd/style.css
+++ b/works/inTheEnd/style.css
@@ -3,20 +3,13 @@
 ********************/
 
 html, body {
-  height: 100%;
-  width: 100%;
   font-family: 'arial black', Helvetica, verdana, monospace, sans-serif;
-  color: #FFF;
   font-size: 100%;
   padding: 0;
   margin: 0;
   letter-spacing: 0.2rem;
-  overflow: hidden;
   background: #000;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  color: #FFF;
 }
 
 body {
@@ -32,15 +25,23 @@ h1 {
   font-size: 1.6rem;
 }
 
+h2 {
+  font-size: 1.6rem;
+  padding: 0 1.6rem 1.6rem 1.6rem;
+}
+
 ul > li {
-  padding-top: 1.6rem;
+  padding: 0 1.6rem 1.6rem 1.6rem;
 }
 
 header#header {
-  position: absolute;
-  top: 0;
-  left: 0;
   padding: 1.6rem;
+}
+
+p {
+  padding: 0 1.6rem 1.6rem 1.6rem;
+  font-size: 0.8rem;
+  line-height: 1.6rem;
 }
 
 p#loading {
@@ -50,30 +51,13 @@ p#loading {
   padding: 1.6rem;
 }
 
+p:last-child {
+  text-align: right;
+}
+
 /********************
   Contents
 ********************/
-
-canvas#canvas {
-  background: #000;
-}
-
-ul#navigation {
-  position: absolute;
-  height: 100%;
-  top: 0;
-  right: 0;
-  text-align: center;
-  margin-right: 1.6rem;
-  font-size: 0.8rem;
-  -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: tb-rl;
-          writing-mode: vertical-rl;
-}
-
-ul#navigation > li {
-  display: inline-block;
-}
 
 @media screen and (min-width: 48rem) {
 
