--- a/works/square/style.css
+++ b/works/square/style.css
@@ -29,7 +29,7 @@ a {
 }
 
 h1 {
-  font-size: 2.4rem;
+  font-size: 1.6rem;
 }
 
 ul > li {
@@ -70,6 +70,15 @@ ul#navigation {
       -ms-writing-mode: tb-rl;
           writing-mode: vertical-rl;
 }
+
 ul#navigation > li {
   display: inline-block;
+}
+
+@media screen and (min-width: 48rem) {
+
+  h1 {
+    font-size: 2.4rem;
+  }
+
 }
