--- a/pattern/styles/style.css
+++ b/pattern/styles/style.css
@@ -91,8 +91,8 @@ header a {
   position: relative;
   color: white;
   text-decoration: none;
-  transition: all .3s ease;
-  -webkit-transition: all .3s;
+  transition: width .3s ease;
+  -webkit-transition: width .3s;
 }
 
 header a::after {
@@ -102,8 +102,8 @@ header a::after {
   display: block;
   position: absolute;
   right: 0;
-  transition: all .3s ease;
-  -webkit-transition: all .3s;
+  transition: width .3s ease;
+  -webkit-transition: width .3s;
   width: 0;
 }
 
