--- a/pattern/styles/style.css
+++ b/pattern/styles/style.css
@@ -158,7 +158,8 @@ h2#title {
   background: rgba(0, 0, 0, 0.7);
   position: absolute;
   top: 0;
-  right: 1.6rem;
+  right: 0;
+  margin-right: 1.6rem;
   height: 100%;
   text-align: center;
   font-size: 0.8rem;
