--- a/pattern/styles/style.css
+++ b/pattern/styles/style.css
@@ -158,8 +158,7 @@ h2#title {
   background: rgba(0, 0, 0, 0.7);
   position: absolute;
   top: 0;
-  right: 0;
-  margin-right: 1.6rem;
+  right: 1.6rem;
   height: 100%;
   text-align: center;
   font-size: 0.8rem;
@@ -194,7 +193,7 @@ main > ul > li {
 span.scroll {
   display: inline-block;
   position: absolute;
-  left: 0.8rem;
+  left: 1.6rem;
   bottom: 0;
   padding: 10px 10px 60px;
   overflow: hidden;
