--- a/pattern/styles/style.css
+++ b/pattern/styles/style.css
@@ -95,6 +95,21 @@ header {
           transform: translateY(-50%);
 }
 
+/* Animation */
+
+header.onloadHeader {
+  -webkit-animation: headerAnimation 0.8s ease;
+}
+
+@-webkit-keyframes 'headerAnimation' {
+  0% {
+    left: -50%;
+  }
+  100% {
+    left: 1.6rem
+  }
+}
+
 /*
 * Referenced https://www.terakoya.work/link-hover-line-css-animation/
 */
@@ -179,6 +194,21 @@ h2#title {
   -webkit-writing-mode: vertical-rl;
       -ms-writing-mode: tb-rl;
           writing-mode: vertical-rl;
+}
+
+/* Animation */
+
+h2.onloadH2 {
+  -webkit-animation: h2Animation 1.6s ease;
+}
+
+@-webkit-keyframes 'h2Animation' {
+  0% {
+    right: -50%;
+  }
+  100% {
+    right: 1.6rem
+  }
 }
 
 /********************
